force-app/main/default/objects/OpportunitySetting__c/OpportunitySetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Opportunity Setting</label>
</CustomObject>