force-app/main/default/objects/OpportunitySetting__c/fields/DefaultDeliveryManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>DefaultDeliveryManagerEmail__c</fullName>
    <label>DefaultDeliveryManagerEmail</label>
    <type>Email</type>
</CustomField>