force-app/main/default/objects/OpportunitySetting__c/fields/FteWhere__c.field-meta.xml
<CustomField>
    <fullName>FteWhere__c</fullName>
    <label>FteWhere</label>
    <type>TextArea</type>
</CustomField>