force-app/main/default/objects/OpportunitySetting__c/fields/thresholdAmountToUpdateRecordType__c.field-meta.xml
<CustomField>
    <fullName>thresholdAmountToUpdateRecordType__c</fullName>
    <label>thresholdAmountToUpdateRecordType</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>